details and goshopcar

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="<%= BASE_URL %>reset.css" />
+    <link
+      rel="stylesheet"
+      href="http://at.alicdn.com/t/c/font_3867377_cogi298ocx.css"
+    />
   </head>
   <body>
     <noscript>
